--- a/WebAppVSEAT/wwwroot/css/Restaurant.css
+++ b/WebAppVSEAT/wwwroot/css/Restaurant.css
@@ -7,13 +7,33 @@
 
     
 }
+@media (min-width: 600px) {
+    .masonry-grid__item {
+        grid-template-columns: repeat(2, 1fr);
+        break-inside: avoid;
+        padding: 5px 5px 5px 5px;
+        margin-bottom: 1rem;
+        background-color: transparent;
+        text-align: center;
+    }
+}
+
+@media (min-width: 900px) {
+    .cards {
+        grid-template-columns: repeat(3, 1fr);
+        break-inside: avoid;
+        padding: 5px 5px 5px 5px;
+        margin-bottom: 1rem;
+        background-color: transparent;
+        text-align: center;
+    }
+}
 
 .masonry-grid__item {
-    break-inside: avoid;
-    padding: 5px 5px 5px 5px;
-    margin-bottom: 1rem;
-    background-color: transparent;
-    text-align: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    display: grid;
+    grid-gap: 1rem;
 }
 
 
