--- a/WebAppVSEAT/wwwroot/css/dishes.css
+++ b/WebAppVSEAT/wwwroot/css/dishes.css
@@ -13,6 +13,8 @@
     flex-wrap: wrap;
     margin-left: -8px;
     margin-right: -8px;
+    align-items: center;
+    justify-content: center;
 }
 
 .cards__item {
@@ -20,4 +22,5 @@
     flex-basis: 25%;
     padding-left: 8px;
     padding-right: 8px;
+    align-items: center;
 }
