--- a/WebAppVSEAT/wwwroot/css/site.css
+++ b/WebAppVSEAT/wwwroot/css/site.css
@@ -162,15 +162,15 @@ body {
     display: none;
     /* Position it right below the trigger element */
     left: 0;
-    padding-top: 4px;
+    padding-top: 5px;
     position: absolute;
-    top: 100%;
+    top: 30px;
     /* It should be on the top of other elements */
     background-color: #fff;
-    z-index: 9999;
+
     /* Size */
-    height: 200px;
-    width: 200px;
+    height: 100px;
+    width: 125px;
 }
 
 /* Show the content when hover on the container */
