--- a/WebAppVSEAT/Views/Customer/Index.cshtml
+++ b/WebAppVSEAT/Views/Customer/Index.cshtml
@@ -7,7 +7,7 @@
 
 
 <div class="cardProfile">
-    <img src="/Images/Avatar/avatar.png" style="width:100%">
+    <img src="~/Images/Avatar/avatar.png" style="width:100%">
     <h1>@Html.DisplayFor(model => model.NAME) @Html.DisplayFor(model => model.SURNAME)</h1>
     <p class="title"> @Html.DisplayFor(model => model.USERNAME)</p>
     <p>
