--- a/WebAppVSEAT/Views/Staff/Profile.cshtml
+++ b/WebAppVSEAT/Views/Staff/Profile.cshtml
@@ -7,7 +7,7 @@
 <hr />
 
 <div class="cardProfile">
-    <img src="/Images/Avatar/avatar.png" style="width:100%">
+    <img src="~/Images/Avatar/avatar.png" style="width:100%">
     <h1>@Html.DisplayFor(model => model.NAMESTAFF) @Html.DisplayFor(model => model.SURNAMESTAFF)</h1>
     <p class="title"> @Html.DisplayFor(model => model.USERNAMESTAFF)</p>
     <p>
