--- a/WebAppVSEAT/Views/Order/CancelOrder.cshtml
+++ b/WebAppVSEAT/Views/Order/CancelOrder.cshtml
@@ -5,32 +5,41 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Cancel Order</h1>
+<h1 style="font-family: 'Palatino Linotype'; text-align: center;">Cancel Order</h1>
 
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="CancelOrder">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="IDORDER" class="control-label"></label>
-                <input asp-for="IDORDER" class="form-control" />
-                <span asp-validation-for="IDORDER" class="text-danger"></span>
+
+<div class="wrapper fadeInDown">
+    <div id="formContent">
+        <center>
+            <div class="row justify-content-center align-content-center">
+                <div class="col-sm-12 col-md-12 col-lg-4">
+                    <form method="post">
+                        <div asp-validation-summary="All" class="text">
+
+                        </div>
+                        <div class="form-group">
+                            <h6>Order Number</h6>
+                            <label class="col-form-label" asp-for="IDORDER" />
+                            <input type="text" asp-for="IDORDER" class="form-control fadeIn second" placeholder="name" />
+                        </div>
+                        <div class="form-group">
+                            <h6>First Name</h6>
+                            <label class="col-form-label" asp-for="NAME" />
+                            <input type="text" asp-for="NAME" class="form-control fadeIn second" placeholder="name" />
+                        </div>
+                        <div class="form-group">
+                            <h6>Last Name</h6>
+                            <label class="col-form-label" asp-for="SURNAME" />
+                            <input type="text" asp-for="SURNAME" class="form-control fadeIn second" placeholder="surname" />
+                        </div>
+                        <div class="form-group">
+                            <input type="submit" value="Cancel Order" class="btn btn-primary" />
+                        </div>
+                    </form>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="NAME" class="control-label"></label>
-                <input asp-for="NAME" class="form-control" />
-                <span asp-validation-for="NAME" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="SURNAME" class="control-label"></label>
-                <input asp-for="SURNAME" class="form-control" />
-                <span asp-validation-for="SURNAME" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Cancel Order" class="btn btn-primary" />
-            </div>
-        </form>
+        </center>
     </div>
 </div>
 
