--- a/WebAppVSEAT/Views/Restaurant/TakeAnOrderConfirmation.cshtml
+++ b/WebAppVSEAT/Views/Restaurant/TakeAnOrderConfirmation.cshtml
@@ -16,13 +16,13 @@
     @for (int i = 0; i < Model.orderDishes.Count(); i++)
     {
         int idDish = Model.orderDishes[i].dish.IDDISHES;
-        string imageUrl = "/Images/Dishes/" + idDish + ".jpg";
+        string imageUrl = "Images/Dishes/" + idDish + ".jpg";
 
         @if (Model.orderDishes[i].QUANTITY > 0)
         {
 
     <div class="containerColumnHomePage">
-        <img src="@imageUrl" alt="@idDish" width="250" height="250" />
+        <img src="~/@imageUrl" alt="@idDish" width="250" height="250" />
         <h4>
             @Html.DisplayFor(modelItem => Model.orderDishes[i].dish.NAMEDISH)
             <br />
