--- a/WebAppVSEAT/wwwroot/css/Restaurant.css
+++ b/WebAppVSEAT/wwwroot/css/Restaurant.css
@@ -1,40 +1,19 @@
-﻿.masonry-grid
-
-{
+﻿.masonry-grid {
     column-count: 3;
     column-gap: 1rem;
     width: 100%;
-
-    
-}
-@media (min-width: 600px) {
-    .masonry-grid__item {
-        grid-template-columns: repeat(2, 1fr);
-        break-inside: avoid;
-        padding: 5px 5px 5px 5px;
-        margin-bottom: 1rem;
-        background-color: transparent;
-        text-align: center;
-    }
-}
-
-@media (min-width: 900px) {
-    .cards {
-        grid-template-columns: repeat(3, 1fr);
-        break-inside: avoid;
-        padding: 5px 5px 5px 5px;
-        margin-bottom: 1rem;
-        background-color: transparent;
-        text-align: center;
-    }
+    flex-wrap: wrap;
 }
 
 .masonry-grid__item {
-    max-width: 1200px;
-    margin: 0 auto;
-    display: grid;
-    grid-gap: 1rem;
+
+    break-inside: avoid;
+    padding: 5px 5px 5px 5px;
+    margin-bottom: 1rem;
+    background-color: transparent;
+    text-align: center;
 }
+
 
 
 .cardSearch {
