--- a/WebAppVSEAT/Views/Restaurant/TakeAnOrder.cshtml
+++ b/WebAppVSEAT/Views/Restaurant/TakeAnOrder.cshtml
@@ -53,10 +53,10 @@
         {
             //var idDish = (int)@Html.DisplayFor(modelItem => Model.orderDishes[i].dish.IDDISHES);
             int idDish = Model.orderDishes[i].dish.IDDISHES;
-            string imageUrl = "Images/Dishes/" + idDish + ".jpg";
+            string imageUrl = "/VS_Eat_Daniel_Thomas/Images/Dishes/" + idDish + ".jpg";
 
             <div class="containerColumnHomePage">
-                <img src="~/@imageUrl" alt="@idDish" width="250" height="250" />
+                <img src="@imageUrl" alt="@idDish" width="250" height="250" />
                 <h4>
                     @Html.DisplayFor(modelItem => Model.orderDishes[i].dish.NAMEDISH)
                     @Html.HiddenFor(modelItem => Model.orderDishes[i].dish.NAMEDISH)
