--- a/WebAppVSEAT/Views/Restaurant/Index.cshtml
+++ b/WebAppVSEAT/Views/Restaurant/Index.cshtml
@@ -8,18 +8,15 @@
 <p>
     <div class="cardSearch">
         @using (@Html.BeginForm("Index", "Restaurant", FormMethod.Get))
-        {
-        <p>
-            <h1>
-
-                <b>Search by :</b> @Html.RadioButton("searchBy", "Restaurant", true)
-                <br />
-            </h1>
-        </p>
-        <p>
-            @Html.TextBox("search")
-        </p>
-        <input type="submit" class="btn" value="search" />
+        {     
+        <h1>
+            <input checked="checked" id="searchBy" name="searchBy" type="radio" value="Restaurant"> Restaurant
+            <input checked="checked" id="searchBy" name="searchBy" type="radio" value="City" > City
+        </h1>
+            <p>
+                @Html.TextBox("search")
+                <input type="submit" class="btn" value="search" />
+            </p>
         }
     </div>
 
