--- a/WebAppVSEAT/Views/Customer/Edit.cshtml
+++ b/WebAppVSEAT/Views/Customer/Edit.cshtml
@@ -19,10 +19,6 @@
                             <input asp-for="IDCUSTOMER" type="hidden" class="form-control" />
                             <span asp-validation-for="IDCUSTOMER" class="text-danger"></span>
                         </div>
-                        <div class="hide">
-                            <input asp-for="IDCITY" type="hidden" class="form-control" />
-                            <span asp-validation-for="IDCITY" class="text-danger"></span>
-                        </div>
                         <div class="form-group">
                             <h6>Name</h6>
                             <label class="col-form-label" asp-for="NAME" />
@@ -51,7 +47,25 @@
                         <div class="form-group">
                             <h6>City</h6>
                             <label class="col-form-label" asp-for="CITYNAME" />
-                            <input type="text" asp-for="CITYNAME" class="form-control fadeIn second" placeholder="city" />
+                            <input type="text" list="cities" asp-for="CITYNAME" class="form-control fadeIn second" placeholder="city" />
+                            <datalist id="cities">
+                                <option value="Martigny">Martigny</option>
+                                <option value="Brigue">Brigue</option>
+                                <option value="Vétroz">Vétroz</option>
+                                <option value="Le Châble">Le Châble</option>
+                                <option value="Hérémence">Hérémence</option>
+                                <option value="Massongex">Massongex</option>
+                                <option value="Turtmann">Turtmann</option>
+                                <option value="Loèche-Les-Bains">Loèche-Les-Bains</option>
+                                <option value="Epinassey">Epinassey</option>
+                                <option value="Savièse">Savièse</option>
+                                <option value="Baltschieder">Baltschieder</option>
+                            </datalist>
+                            <span asp-validation-for="CITYNAME" class="text-danger fadeIn second"></span>
+                        </div>
+                        <div class="hide">
+                            <input asp-for="IDCITY" hidden type="number" class="form-control" />
+                            <span asp-validation-for="IDCITY" class="text-danger"></span>
                         </div>
                         <div class="form-group">
                             <h6>Email</h6>
@@ -67,6 +81,8 @@
         </center>
     </div>
 </div>
+
+
 
 
 @section Scripts {
