--- a/WebAppVSEAT/Views/Order/CancelOrderID.cshtml
+++ b/WebAppVSEAT/Views/Order/CancelOrderID.cshtml
@@ -13,7 +13,7 @@
         <center>
             <div class="row justify-content-center align-content-center">
                 <div class="col-sm-12 col-md-12 col-lg-4">
-                    <form method="post">
+                    <form method="post" asp-controller="Order" asp-action="CancelOrder">
                         <div asp-validation-summary="All" class="text">
 
                         </div>
