--- a/WebAppVSEAT/Views/Login/CreateCustomer.cshtml
+++ b/WebAppVSEAT/Views/Login/CreateCustomer.cshtml
@@ -14,28 +14,32 @@
                 <form asp-action="CreateCustomer">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-group">
-                        <label asp-for="NAME" class="control-label"></label>
+                        <h6>Name</h6>
+                        <label asp-for="NAME" class="control-label" hidden></label>
                         <input type="text" asp-for="NAME" class="form-control fadeIn second" placeholder="name" />
                         <span asp-validation-for="NAME" class="text-danger fadeIn second"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="SURNAME" class="control-label"></label>
+                        <h6>Surname</h6>
+                        <label asp-for="SURNAME" class="control-label" hidden></label>
                         <input type="text" asp-for="SURNAME" class="form-control fadeIn second" placeholder="surname" />
                         <span asp-validation-for="SURNAME" class="text-danger fadeIn second"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="USERNAME" class="control-label"></label>
+                        <h6>Username</h6>
+                        <label asp-for="USERNAME" class="control-label" hidden></label>
                         <input asp-for="USERNAME" class="form-control fadeIn second" placeholder="username" />
                         <span asp-validation-for="USERNAME" class="text-danger fadeIn second"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="ADDRESS" class="control-label"></label>
+                        <h6>Address</h6>
+                        <label asp-for="ADDRESS" class="control-label" hidden></label>
                         <input asp-for="ADDRESS" class="form-control fadeIn second" placeholder="address" />
                         <span asp-validation-for="ADDRESS" class="text-danger fadeIn second"></span>
                     </div>
                     <div class="form-group">
-                        <h6>CITY</h6>
-                        <label class="col-form-label" asp-for="CITYNAME" />
+                        <h6>City</h6>
+                        <label class="col-form-label" asp-for="CITYNAME"/>
                         <input type="text" list="cities" asp-for="CITYNAME" class="form-control fadeIn second" placeholder="city" />
                         <datalist id="cities">
                             <option value="Martigny">Martigny</option>
@@ -53,25 +57,29 @@
                         <span asp-validation-for="CITYNAME" class="text-danger fadeIn second"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="PHONE" class="control-label"></label>
+                        <h6>Phonenumber</h6>
+                        <label asp-for="PHONE" class="control-label" hidden></label>
                         <input type="text" asp-for="PHONE" class="form-control fadeIn second" placeholder="phone number" />
                         <span asp-validation-for="PHONE" class="text-danger fadeIn second"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="MAIL" class="control-label"></label>
+                        <h6>Mail</h6>
+                        <label asp-for="MAIL" class="control-label" hidden></label>
                         <input type="text" asp-for="MAIL" class="form-control fadeIn second" placeholder="mail" />
                         <span asp-validation-for="MAIL" class="text-danger fadeIn second"></span>
                     </div>
                     
                     <div class="form-group">
-                        <label asp-for="PASSWORD" class="control-label"></label>
+                        <h6>Password</h6>
+                        <label asp-for="PASSWORD" class="control-label" hidden></label>
                         <input type="password" asp-for="PASSWORD" class="form-control fadeIn second" placeholder="password" />
                         <span asp-validation-for="PASSWORD" class="text-danger fadeIn second"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="confirmerPassword" class="control-label"></label>
-                        <input type="password" asp-for="confirmerPassword" class="form-control fadeIn second" placeholder="confirm password" />
-                        <span asp-validation-for="confirmerPassword" class="text-danger fadeIn second"></span>
+                        <h6>Confirm password</h6>
+                        <label asp-for="CONFIRMPASSWORD" class="control-label" hidden></label>
+                        <input type="password" asp-for="CONFIRMPASSWORD" class="form-control fadeIn second" placeholder="confirm password" />
+                        <span asp-validation-for="CONFIRMPASSWORD" class="text-danger fadeIn second"></span>
                     </div>
                     <div class="form-group">
                         <input type="submit" class="fadeIn fourth" value="Create"/>
