--- a/WebAppVSEAT/Views/Login/CreateCustomer.cshtml
+++ b/WebAppVSEAT/Views/Login/CreateCustomer.cshtml
@@ -6,11 +6,13 @@
 }
 
 <hr />
+@Html.ActionLink("Want to become a delivery staff ?", "BecomeStaff" /*new { id = Model.IDORDER }*/)
 <div class="wrapper fadeInDown">
     <div id="formContent">
         <div class="h2LogIn active">Create Customer</div>
         <div class="row justify-content-center align-content-center">
             <div class="col-sm-12 col-md-12 col-lg-4">
+
                 <form asp-action="CreateCustomer">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-group">
@@ -39,7 +41,7 @@
                     </div>
                     <div class="form-group">
                         <h6>City</h6>
-                        <label class="col-form-label" asp-for="CITYNAME"/>
+                        <label class="col-form-label" asp-for="CITYNAME" />
                         <input type="text" list="cities" asp-for="CITYNAME" class="form-control fadeIn second" placeholder="city" />
                         <datalist id="cities">
                             <option value="Martigny">Martigny</option>
@@ -68,7 +70,7 @@
                         <input type="text" asp-for="MAIL" class="form-control fadeIn second" placeholder="mail" />
                         <span asp-validation-for="MAIL" class="text-danger fadeIn second"></span>
                     </div>
-                    
+
                     <div class="form-group">
                         <h6>Password</h6>
                         <label asp-for="PASSWORD" class="control-label" hidden></label>
@@ -82,17 +84,17 @@
                         <span asp-validation-for="CONFIRMPASSWORD" class="text-danger fadeIn second"></span>
                     </div>
                     <div class="form-group">
-                        <input type="submit" class="fadeIn fourth" value="Create"/>
-                    </div>                   
+                        <input type="submit" class="fadeIn fourth" value="Create" />
+                    </div>
                 </form>
             </div>
         </div>
-     </div>
- </div>
+    </div>
+</div>
 
 
-    @section Scripts {
-        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-    }
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
 
 
