--- a/WebAppVSEAT/Views/Login/BecomeStaff.cshtml
+++ b/WebAppVSEAT/Views/Login/BecomeStaff.cshtml
@@ -25,6 +25,9 @@
                 <textarea rows="8" cols="100" asp-for="bodyMail"></textarea>
                 <span asp-validation-for="bodyMail" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <input type="submit" value="Send"/>
+            </div>
         </form>
     </div>
 </div>
